# ppga

./: .gitignore  .gitmodules  README.md  grammar.EBNF  ppga.bat  ppga.sh  t.ppga  tour.ppga
ppga/: Cargo.toml
ppga-cpp/: CMakeLists.txt  README.md  main.cpp  ppga.hpp
ppga-cpp/tests/: CMakeLists.txt  lexer.cpp  parser.cpp  ppga.cpp  tour.ppga.ast
ppga/src/: main.rs
ppga/src/lib/: config.rs  errors.rs  lib.rs  macros.rs
ppga/src/lib/codegen/: codegen.rs  snippets.rs
ppga/src/lib/frontend/: ast.rs  lexer.rs  parser.rs
vscode-ppga/: package.json
vscode-ppga/syntaxes/: ppga.json
