[package]
name = "ppga"
version = "0.6.0"
authors = ["OptimalStrategy <17456182+OptimalStrategy@users.noreply.github.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
logos = "0.11.4"
clap = { version = "2.33.1", optional = true }

[lib]
name = "ppga"
path = "src/lib/lib.rs"

[features]
build-binary = ["clap"]

[[bin]]
name = "ppga"
path = "src/main.rs"
required-features = ["build-binary"]
